Removed some warnings and deprecated TODOs